--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -16,8 +16,19 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="100dp">
+            <TextView
+                android:gravity="center"
+                android:text="대 한 포 장"
+                android:textSize="31sp"
+                android:layout_gravity="bottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="100dp"
             android:orientation="vertical">
 
             <LinearLayout
