--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -168,26 +168,39 @@
         android:id="@+id/tv_cound"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <EditText
-            android:textSize="20sp"
-            android:id="@+id/EditTextReception"
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <EditText
+                android:textSize="15sp"
+                android:id="@+id/EditTextReception"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"
+                android:enabled="false"
+                android:textColor="#FFFFFF"
+                android:gravity="top"
+                android:hint="결과 창"
+                android:scrollbarStyle="insideInset"
+                android:scrollbars="vertical"></EditText>
+        </ScrollView>
+        <me.dm7.barcodescanner.zxing.ZXingScannerView
             android:layout_weight="1"
-            android:background="@null"
-            android:enabled="false"
-            android:textColor="#FFFFFF"
-            android:gravity="top"
-            android:hint="결과 창"
-            android:scrollbarStyle="insideInset"
-            android:scrollbars="vertical"></EditText>
-    </ScrollView>
+            android:visibility="visible"
+            android:padding="5dp"
+            android:id="@+id/barcode_scanner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+        </me.dm7.barcodescanner.zxing.ZXingScannerView>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -208,6 +221,7 @@
         tools:ignore="DuplicateIds">
 
         <ToggleButton
+            android:checked="true"
             android:id="@+id/button_repeat"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
