--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -51,6 +51,7 @@
                     android:textSize="25sp" />
 
                 <EditText
+                    android:text="dk"
                     android:id="@+id/et_id"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
@@ -75,6 +76,7 @@
                     android:textSize="25sp" />
 
                 <EditText
+                    android:text="00000000"
                     android:id="@+id/et_pw"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
