--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,15 +12,44 @@
         android:layout_width="match_parent"
         android:layout_height="350dp">
 
-        <me.dm7.barcodescanner.zxing.ZXingScannerView
-            android:layout_weight="1"
-            android:visibility="invisible"
-            android:padding="5dp"
-            android:id="@+id/barcode_scanner"
+        <FrameLayout
+            android:visibility="visible"
+            android:background="#000000"
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-        </me.dm7.barcodescanner.zxing.ZXingScannerView>
+            android:layout_height="match_parent">
+            <androidx.camera.view.PreviewView
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/previewview">
+
+            </androidx.camera.view.PreviewView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginBottom="50dp"
+                    android:background="@drawable/background_image" />
+            </RelativeLayout>
+        </FrameLayout>
+<!--        <me.dm7.barcodescanner.zxing.ZXingScannerView-->
+<!--            android:layout_weight="1"-->
+<!--            android:visibility="invisible"-->
+<!--            android:padding="5dp"-->
+<!--            android:id="@+id/barcode_scanner"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:gravity="center">-->
+<!--        </me.dm7.barcodescanner.zxing.ZXingScannerView>-->
         <TextView
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
