--- a/app/src/main/res/layout/scan_export_national.xml
+++ b/app/src/main/res/layout/scan_export_national.xml
@@ -18,14 +18,43 @@
 			android:layout_width="match_parent"
 			android:layout_height="350dp">
 
-			<me.dm7.barcodescanner.zxing.ZXingScannerView
-				android:id="@+id/barcode_scanner"
+			<FrameLayout
+				android:visibility="visible"
+				android:background="#000000"
+				android:id="@+id/container"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:padding="5dp"
-				android:visibility="invisible"></me.dm7.barcodescanner.zxing.ZXingScannerView>
+				android:layout_height="match_parent">
+				<androidx.camera.view.PreviewView
+					android:visibility="gone"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:id="@+id/previewview">
+
+				</androidx.camera.view.PreviewView>
+				<RelativeLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent">
+
+					<ImageView
+						android:id="@+id/image"
+						android:layout_width="match_parent"
+						android:layout_height="match_parent"
+						android:layout_centerInParent="true"
+						android:layout_marginStart="50dp"
+						android:layout_marginTop="50dp"
+						android:layout_marginEnd="50dp"
+						android:layout_marginBottom="50dp"
+						android:background="@drawable/background_image" />
+				</RelativeLayout>
+			</FrameLayout>
+<!--			<me.dm7.barcodescanner.zxing.ZXingScannerView-->
+<!--				android:id="@+id/barcode_scanner"-->
+<!--				android:layout_width="match_parent"-->
+<!--				android:layout_height="match_parent"-->
+<!--				android:layout_weight="1"-->
+<!--				android:gravity="center"-->
+<!--				android:padding="5dp"-->
+<!--				android:visibility="invisible"></me.dm7.barcodescanner.zxing.ZXingScannerView>-->
 			<TextView
 				android:layout_alignParentBottom="true"
 				android:layout_gravity="center"
