--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -124,7 +124,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="50dp"
                 android:padding="20dp"
-                android:text="LOGIN" />
+                android:text="TEST" />
 
 
         </LinearLayout>
