--- a/app/src/main/res/layout/scan_export_national.xml
+++ b/app/src/main/res/layout/scan_export_national.xml
@@ -36,7 +36,7 @@
 					android:layout_height="match_parent">
 
 					<ImageView
-						android:id="@+id/image"
+						android:id="@+id/background_image"
 						android:layout_width="match_parent"
 						android:layout_height="match_parent"
 						android:layout_centerInParent="true"
