--- a/app/src/main/res/layout/scan_export_national.xml
+++ b/app/src/main/res/layout/scan_export_national.xml
@@ -35,6 +35,13 @@
 					android:layout_width="match_parent"
 					android:layout_height="match_parent">
 
+					<Switch
+						android:id="@+id/switchFlashLight"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_centerHorizontal="true"
+						android:checked="true"
+						android:text="플래쉬 ON" />
 					<ImageView
 						android:id="@+id/background_image"
 						android:layout_width="match_parent"
